--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE Posted.html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,12 +6,54 @@
     <title>Gem Experience | Advanced Production & System Consulting</title>
     <link rel="stylesheet" href="style.css">
 
+    <link rel="canonical" href="https://gemexperience.github.io/pro-tech-consulting/index.html">
+    <link rel="alternate" hreflang="da" href="https://gemexperience.github.io/pro-tech-consulting/index-dk.html">
+    <link rel="alternate" hreflang="en" href="https://gemexperience.github.io/pro-tech-consulting/index.html">
+
     <meta property="og:title" content="Gem Experience | Low Latency & DAW System Expert" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://gemexperience.github.io/pro-tech-consulting/index.html" />
     <meta property="og:image" content="https://gemexperience.github.io/pro-tech-consulting/Gem-Ex-LOGO-copy-terminator-two-font-copyFINAL.png" />
     <meta property="og:description" content="20+ years expert in Pro Audio/Video & Hybrid Analog/Digital Production. Advanced troubleshooting, system optimization, and crucial gear advice." />
     <meta property="og:site_name" content="Gem Experience" />
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Service",
+      "serviceType": "Advanced Audio and DAW System Consulting",
+      "name": "Gem Experience | Advanced Production & System Consulting",
+      "description": "20+ Year Certified Expert in Low-Latency Audio, DAW Workflow, and Hybrid Analog/Digital Production. I diagnose and resolve the complex technical issues that Tier 1 support can't touch.",
+      "url": "https://gemexperience.github.io/pro-tech-consulting/index.html",
+      "areaServed": {
+        "@type": "Country",
+        "name": "Worldwide"
+      },
+      "provider": {
+        "@type": "Organization",
+        "name": "Gem Experience",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "contactType": "customer service",
+          "email": "GemExperience@icloud.com"
+        }
+      },
+      "offers": [
+        {
+          "@type": "Offer",
+          "priceCurrency": "USD",
+          "price": "75.00",
+          "description": "Quick Solve (Specific Issue) - 30 Minutes"
+        },
+        {
+          "@type": "Offer",
+          "priceCurrency": "USD",
+          "price": "150.00",
+          "description": "Deep Dive (System Audit / Training) - 60 Minutes"
+        }
+      ]
+    }
+    </script>
 </head>
 <body>
     <div class="lang-switch">
@@ -46,7 +88,7 @@
             </ul>
 
             <div class="pricing-table">
-                <table>
+                <table lang="en">
                     <thead>
                         <tr>
                             <th>Service Tier</th>
